refactor: synchronized 적용해보기 (서로 다른 칸에 대한 요청이라도 락 개체가 같으면 직렬화되어 성능 저하 문제 있음)